# speech

./: .gitignore  CLAUDE.md  README.md  __init__.py  app.js  config-cc-connect.toml  config.py  config.yaml  generate_ref_voices.py  index.html  models.py  podcast_manager.py  pyproject.toml  regression_test.py  requirements.txt  run.py  self_test.py  server.py  server_runner.py  spec.md  styles.css  test.sh  test_speed_comparison.py  test_strip.js  test_tones.py  test_tts_0.5b.py  test_tts_full.py
.playwright-mcp/: page-2026-04-26T07-51-30-214Z.yml
.project/specs/: acceptance.md  architecture.md  interfaces.md  review-round-1.md  review-round-2.md  review-round-3.md  review-round-4.md  review-round-5.md  spec.md  story.md
docs/: OMNIVOICE_SPEC.md
engines/: local_vibevoice.py
scripts/: qwen_tts_bridge.py
static/: index.html  styles.css
tests/: TESTING_NOTES.md  test_sample_manager.py  test_segmentation_completeness.py  test_voice_design.py
tests/e2e/: test_live_podcast_flow.py  test_live_studio_flow.py
tests/int/: test_config.py  test_end_detector.py  test_merge.py  test_models.py  test_state_machine.py  test_tts_streaming.py  test_wav_writer.py  test_ws_protocol.py
tests/unit/: test_asr_engine.py  test_live_advanced.py  test_live_http.py  test_live_ws.py
tts_service/: __init__.py  app.js  cli.py  config.py  first_run.py  index.html  models.py  podcast_manager.py  sample_manager.py  segmentation.py  server.py  server_runner.py  tts_engine.py  voice_design.py
tts_service/engines/: __init__.py  base.py  local_vibevoice.py  omlx_remote.py  qwen_remote.py
tts_service/live/: __init__.py  asr_engine.py  end_detector.py  session.py  (+3 more)
(+5 files in other folders)
